--- a/index.html
+++ b/index.html
@@ -31,20 +31,7 @@
         </div>
 		<script src="https://apis.google.com/js/platform.js"></script>
 
-<script>
-  function onYtEvent(payload) {
-    if (payload.eventType == 'subscribe') {
-      // Add code to handle subscribe event.
-    } else if (payload.eventType == 'unsubscribe') {
-      // Add code to handle unsubscribe event.
-    }
-    if (window.console) { // for debugging only
-      window.console.log('YT event: ', payload);
-    }
-  }
-</script>
-
-<div class="g-ytsubscribe" data-channel="GoogleDevelopers" data-layout="default" data-count="default" data-onytevent="onYtEvent"></div>
+<div class="g-ytsubscribe" data-channelid="UClKyUPvZEFd9ZCj9wiyefbg" data-layout="default" data-count="default"></div>
         <!-- HEADER -->
         <header class="a-header style-1 g-type">
             <div class="inner-wrap style-1">
