--- a/index.html
+++ b/index.html
@@ -722,8 +722,8 @@
             <!-- Preloader -->
             <div class="preloader">
                <div class="content text-center">
-                  <strong>Morian</strong>
-                  <span>Portfolio Template</span>
+                  <strong>-MN-</strong>
+                  <span>I Am Here</span>
                   <div class="preloader-progress">
                      <div class="preloader-progress-bar"></div>
                   </div>
