--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                <div class="container">
                   <span>Hello!</span>
                   <h1>
-                     <span>I'm &nbsp;</span>Mobasser Nazar<i class="fa fa-circle"></i>
+                     <span>I'm &nbsp;</span>Mobasser Nazar
                   </h1>
                   <h2>Front-End Developer</h2>
                </div>
