--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <title>Mobasser's Personal Portfolio</title>
 
       <!-- Favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico">
+      <link rel="shortcut icon" href="images/favicon.ico1">
 
       <!-- Bootstrap Stylesheet -->
       <link rel='stylesheet' href='data/bundles/4c06ea8053f8ddf5013b0b92b978321c3529d131.css'/>
