--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="skill">
                            <!-- skill title -->
                            <ul class="list-unstyled list-inline clearfix">
-                              <li class="title">Angular</li>
+                              <li class="title">React JS</li>
                               <li class="strength">70%</li>
                            </ul>
                            <!-- skill strength -->
@@ -197,7 +197,7 @@
                               <div class="progress-bar" style="width: 0"></div>
                            </div>
                            <!-- skill experience -->
-                           <span>3 years experience</span>
+                           <span>1 years experience</span>
                         </div>
 
                         <div class="skill">
