--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Page Holder -->
          <div class="page-holder">
             <!-- Navbar -->
-            <nav id="mainNavbar" class="mainNavbar -fixed-top">
+            <nav id="mainNavbar" class="mainNavbar asds -fixed-top">
                <div class="container">
 
                   <!-- Navigation Menu  -->
