--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="brand">
                         <div class="content">
                            <strong>Mobasser Nazar</strong>
-                           <span>Front-End Engineer</span>
+                           <span>Senior Software Engineer</span>
                         </div>
                      </div>
 
@@ -87,7 +87,7 @@
                   <h1>
                      <span>I'm &nbsp;</span>Mobasser Nazar
                   </h1>
-                  <h2>Front-End Engineer</h2>
+                  <h2>Senior Software Engineer</h2>
                </div>
             </header><!-- end Header -->
 
@@ -145,7 +145,11 @@
                      <div class="timeline section-box-margin">
                         <div class="block block-left">
                            <h3>Sr. Interactive Developer</h3>
-                           <p>Sapient Razorfish_ 2016 - Present</p>
+                           <p>Dell 2019 - Present</p>
+                        </div>
+						<div class="block block-left">
+                           <h3>Sr. Interactive Developer</h3>
+                           <p>Sapient Razorfish_ 2016 - 2019</p>
                         </div>
 
                         <div class="block block-right">
@@ -543,7 +547,7 @@
             <!-- Footer -->
             <footer id="mainFooter">
                <div class="container text-center">
-                  <p>Copyrights &copy; 2018.</p>
+                  <p>Copyrights &copy; 2021.</p>
                </div>
             </footer><!-- end Footer -->
 
