--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                      <p class="lead-uniqu section-description">My objective is to prove myself as an asset to the organization which will provide me opportunity to prove my words and excel in everything I do.</p>
 
                      <div class="timeline section-box-margin">
-                        <div class="block block-left">
-                           <h3>Sr. Interactive Developer</h3>
+                        <div class="block block-right">
+                           <h3>Sr. Software Engineer</h3>
                            <p>Dell 2019 - Present</p>
                         </div>
 						<div class="block block-left">
