--- a/index_bak.html
+++ b/index_bak.html
@@ -87,7 +87,7 @@
                   <h1>
                      <span>I'm &nbsp;</span>Mobasser Nazar<i class="fa fa-circle"></i>
                   </h1>
-                  <h2>Front-End Engineer</h2>
+                  <h2>Software Engineer</h2>
                </div>
             </header><!-- end Header -->
 
