--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                      <div class="brand">
                         <div class="content">
                            <strong>Mobasser Nazar</strong>
-                           <span>Senior Software Engineer</span>
+                           <span>Freelance Programmer</span>
                         </div>
                      </div>
 
@@ -103,7 +103,7 @@
 
 
             <!-- Resume -->
-            <section class="resume section-padding has-before-border" id="resume">
+            <section class="resume section-padding has-before-border">
                <div class="container text-center">
                   <!-- Education -->
                   <div class="education">
@@ -135,7 +135,7 @@
                   </div><!-- end Education -->
 
                   <!-- Employment -->
-                  <div class="employment">
+                  <div class="employment" id="resume">
                      <h2>Employment</h2>
                      <p class="lead-uniqu section-description">My objective is to prove myself as an asset to the organization which will provide me opportunity to prove my words and excel in everything I do.</p>
 
@@ -182,7 +182,7 @@
                               <div class="progress-bar" style="width: 0"></div>
                            </div>
                            <!-- skill experience -->
-                           <span>6 years experience</span>
+                           <span>7 years experience</span>
                         </div>
 
                         <div class="skill">
@@ -196,7 +196,7 @@
                               <div class="progress-bar" style="width: 0"></div>
                            </div>
                            <!-- skill experience -->
-                           <span>1 years experience</span>
+                           <span>3 years experience</span>
                         </div>
 
                         <div class="skill">
@@ -258,7 +258,7 @@
                         <div class="skill">
                            <!-- skill title -->
                            <ul class="list-unstyled list-inline clearfix">
-                              <li class="title">SASS</li>
+                              <li class="title">LESS</li>
                               <li class="strength">80%</li>
                            </ul>
                            <!-- skill strength -->
@@ -515,8 +515,8 @@
                         </div>
 						<div class="col-sm-12">
                            <label for="message">
-                              <span>Camera</span>
-                              <input type="file" accept="image/*" capture="camera">
+                              <span>File</span>
+                              <input type="file" capture="file">
                            </label>
                         </div>
 						
