--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- Main Stylesheet -->
       <link rel='stylesheet' href='data/bundles/48c8a703657a4f57ad7261592cf58aa860b7d8e5.css'/>
       <!-- Color Stylesheet -->
-      <link rel='stylesheet' href='data/css/d3bb939c6096ce9ad2bf6ff826e9387b25df1175/css/colors/color1.css'/>
+      <link rel='stylesheet' href='/css/colors/color2.css'/>
 
       <!-- Google Font -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,600,700,800,900">
@@ -83,7 +83,7 @@
                <div class="container">
                   <span>Hello!</span>
                   <h1>
-                     <span>I'm &nbsp;</span>Mobasser Nazar
+                     <span>I'm &nbsp;</span>Mobasser
                   </h1>
                   <h2>Freelance Programmer</h2>
                </div>
