--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                      <div class="brand">
                         <div class="content">
                            <strong>Mobasser Nazar</strong>
-                           <span>Freelance Programmer</span>
+                           <span>Senior Software Engineer</span>
                         </div>
                      </div>
 
@@ -81,7 +81,7 @@
                   <h1>
                      <span>I'm &nbsp;</span>Mobasser
                   </h1>
-                  <h2>Freelance Programmer</h2>
+                  <h2>Senior Software Programmer</h2>
                </div>
             </header>
             <!-- end Header -->
@@ -138,7 +138,7 @@
 
                      <div class="timeline section-box-margin">
                         <div class="block block-right">
-                           <h3>Freelance Programmer</h3>
+                           <h3>NewEra Technologies</h3>
                            <p>Present</p>
                         </div>
 						   <div class="block block-left">
