--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 
                      <div class="timeline section-box-margin">
                         <div class="block block-right">
-                           <h3>NewEra Technologies</h3>
-                           <p>Present</p>
+                           <h3>Senior Sofware Engineer</h3>
+                           <p>NewEra Technologies - Present</p>
                         </div>
 						   <div class="block block-left">
                            <h3>Sr. Interactive Developer</h3>
