--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                      <div class="timeline section-box-margin">
                         <div class="block block-right">
                            <h3>Senior Sofware Engineer</h3>
-                           <p>NewEra Technologies - Present</p>
+                           <p>Dell Technologies - Present</p>
                         </div>
 						   <div class="block block-left">
                            <h3>Sr. Interactive Developer</h3>
