--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <h1>
                      <span>I'm &nbsp;</span>Mobasser
                   </h1>
-                  <h2>Senior Software Engineer/h2>
+                  <h2>Senior Software Engineer</h2>
                </div>
             </header>
             <!-- end Header -->
