--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
                      <div class="timeline section-box-margin">
                         <div class="block block-right">
                            <h3>Senior Sofware Engineer</h3>
-                           <p>Dell Technologies [2019 - Present]</p>
+                           <p>Dell Technologies 2019 - Present</p>
                         </div>
 						   <div class="block block-left">
                            <h3>Sr. Interactive Developer</h3>
-                           <p>Sapient [2016 - 2019]</p>
+                           <p>Sapient 2016 - 2019</p>
                         </div>
 
                         <div class="block block-right">
                            <h3>Sr. UI/UX Developer</h3>
-                           <p>Times Internet Limited [2013 - 2016]</p>
+                           <p>Times Internet Limited 2013 - 2016</p>
                         </div>
 
                         <div class="block block-left">
